--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <html>
     <body>
-        <form action='/predict' method='POST'>
-            sepal lenght<input type='text'name='sepal_lenght'><br>
-            sepal width<input type='text'name='sepal_width'><br>
-            petal lenght<input type='text'name='petal_lenght'><br>
-            petal width<input type='text'name='petal_width'><br>
+        <form action = '/predict' method='POST'>
+            sepal lenght<input type='text' name='sepal_lenght'><br>
+            sepal width<input type='text' name='sepal_width'><br>
+            petal lenght<input type='text' name='petal_lenght'><br>
+            petal width<input type='text' name='petal_width'><br>
             Class:{{result}}<br>
-            <input type='submit' value='predict'
+            <input type='submit' value='predict'>
 
         </form>
     </body>
